<resources>
    <string name="app_name">AppUpdata</string>

    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="demo_info0">0.需要依赖ApkPatchLibrary</string>
    <string name="demo_info1">1.请先安装旧版V4.5.0；点击下载：URL</string>
    <string name="demo_info2">2.将由服务器端生成的差分文件jimubox.patch（V4.5.0 -> V4.5.0）拷贝至：/sdcard/jimubox.patch；点击下载：URL</string>
    <string name="demo_info3">3.点击“Start”；</string>
    <string name="demo_intr0duce1">old app</string>
    <string name="demo_intr0duce2">new app</string>
    <string name="demo_start">Start</string>
    <string name="demo_github">GitHub</string>
</resources>
